--- a/css/styles.css
+++ b/css/styles.css
@@ -76,7 +76,7 @@
 }
 
 @font-face {
-  font-family: 'Palace';
+  font-family: 'palace';
   src: url('fonts/Palace.eot');
   src: url('fonts/Palace.eot?#iefix') format('embedded-opentype'),
       url('fonts/Palace.woff2') format('woff2'),
