--- a/css/styles.css
+++ b/css/styles.css
@@ -4063,7 +4063,7 @@ textarea.form-control-lg {
   font-size: 2rem;
   text-decoration: none;
   white-space: nowrap;
-  font-family: "palace";
+  font-family: "palace" !important;
 }
 .navbar-nav {
   display: flex;
